Add the header to the index html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1 class="Beetroot">Beetroot</h1>
+    <h1 class="beetroot">Beetroot</h1>
     <i>(Beta vulgaris)</i>
     <nav>
       <ol>
